# total-recall

./: .gitignore  PLAN_PHASE1_HANDOFF.md  PROPOSALS_2026-04-22.md  README.md  REPORT.md  STATE.yaml  TEST-REPORT.md  decisions.md  env.example  handler.js  handler.js.backup  handler.js.backup.20260405_002856  handoff-2026-03-31-kb.md  index.js  install.sh  lossless-claw-analysis-v2.md  lossless-claw-analysis.md  openclaw.plugin.json  package.json  phi4-mini-load.md
config/: .env.example  config.py  kb_schema.sql  openclaw-patch.json  store.py
cypher/: flashback.cypher  init-schema.cypher
docs/: architecture.md  bge-reranker-usage.md  bootstrap-game.md  commit-prompt.md  decisions.md  deep-memory-thinking.md  dmt-skills-test-2026-03-26.md  dump-format.md  event-structure.md  handoff-2026-03-30-curator-v2.md  integration.md  memory-schema.md  qdrant-indexing-fix-2026-03-26.md  questions-for-development.md  repo-files-sync-2026-03-26.md  reranking-update-2026-03-26.md  session-id-research.md  session-store-research.md  sliding-context-window.md  symbiosis.md  total-recall-reranking-problem.md
prompts/: PROTOCOL-memory-section.md  mem0-extraction-prompt.md
reports/: FIX-tui-session-registration-2026-04-04.md  TEST_ANALYSIS_v0.1.0.md  check-2026-04-07.md  (+1 more)
reranker-api/: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
skills/memory-reflect/: .gitignore  category_config.py  config.py  create_missing_embeddings.py  kb_store.py  memory-daemon.py  memory-daemon.service  memory-reflect.py  migrate_summary.py  pyproject.toml  session_store.py  store.py
(+4 files in other folders)
