[tool.poetry]
name = "memory-reflect"
version = "0.1.0"
description = "OpenClaw memory reflection skill"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
neo4j = "*"
qdrant-client = "*"
requests = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
