[tool.poetry]
name = "memory-reflect"
version = "0.1.0"
description = "OpenClaw memory reflection skill"
authors = []

[tool.poetry.dependencies]
python = "^3.10"
neo4j = "*"
qdrant-client = "*"
requests = "*"
psycopg2-binary = "^2.9.11"
httpx = "^0.28.1"
pydantic-settings = "^2.13.1"
python-dotenv = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
